complete TSSP model w/o finrisk

--- a/Models.ipynb
+++ b/Models.ipynb
@@ -2,17 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
+    "import pdb\n",
     "\n",
     "from scipy import optimize\n",
     "import numpy as np\n",
     "% matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def midpoint_vals(bound):\n",
+    "    if bound[0] is None:\n",
+    "        return bound[1]\n",
+    "    \n",
+    "    if bound[1] is None:\n",
+    "        return bound[0]\n",
+    "    \n",
+    "    return (bound[1] - bound[0])/2"
    ]
   },
   {
@@ -63,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -139,259 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a = np.random.normal(0,1,25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.44913704,  1.67834196,  1.55355153,  0.75830252, -0.432152  ,\n",
-       "        1.44588465, -0.51572166, -1.04472896,  0.79933831, -0.79047115,\n",
-       "        0.5338849 , -1.83893157, -0.51783001,  0.82696969,  1.06524289,\n",
-       "       -1.08051976, -0.62922052, -0.29300695,  0.01006503, -0.37225938,\n",
-       "       -0.50629288,  0.18850247,  0.14137509,  0.99053001,  1.62391023])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = a.reshape(5,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.44913704,  1.67834196,  1.55355153,  0.75830252, -0.432152  ],\n",
-       "       [ 1.44588465, -0.51572166, -1.04472896,  0.79933831, -0.79047115],\n",
-       "       [ 0.5338849 , -1.83893157, -0.51783001,  0.82696969,  1.06524289],\n",
-       "       [-1.08051976, -0.62922052, -0.29300695,  0.01006503, -0.37225938],\n",
-       "       [-0.50629288,  0.18850247,  0.14137509,  0.99053001,  1.62391023]])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.44913704, -0.51572166, -0.51783001,  0.01006503,  1.62391023])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.diagonal()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.00681444, -0.32022964, -0.9002304 ,  0.12942348, -0.02298906],\n",
-       "       [ 1.16332388,  1.63940011,  2.30218522, -0.86326278, -0.26731533]])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 2)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3, 7])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot([[1,2],[3,4]],[[1,1],])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(np.dot([[1,2],[3,4]],[1,1]), np.ones(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-2.53843056, -1.42678358, -5.87461745,  8.91204998, -4.84530833,\n",
-       "        2.78118296,  3.88662958, -2.56845004,  2.02103656,  1.46802793])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(np.random.normal(0,1,(10,2)), [3,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-41.080388183994941"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(np.dot(np.random.normal(0,1,(10,2)), [3,4]), np.ones(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2.5,  2.5,  2.5,  2.5,  2.5,  2.5,  2.5,  2.5,  2.5,  2.5])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.ones(10)*2.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -429,20 +203,21 @@
     "    # segment design variables\n",
     "    num_stoch = q.size\n",
     "    s = x[:num_stoch]\n",
-    "    s.reshape(num_scenarios,2)\n",
+    "    s = s.reshape(num_scenarios,2)\n",
     "    \n",
     "    det_indices = [len(c), len(e), len(f)]\n",
     "    for idx in range(0, len(det_indices)):\n",
     "        if idx == 0:\n",
     "            det_indices[idx] += num_stoch\n",
     "            continue\n",
-    "        det_indices[idx] += num_stoch + det_indices[idx-1]\n",
+    "        det_indices[idx] += det_indices[idx-1]\n",
     "    p = x[num_stoch:det_indices[0]]\n",
     "    I = x[det_indices[0]:det_indices[1]]\n",
     "    R = x[det_indices[1]:det_indices[2]]\n",
     "    \n",
     "    su_sl = x[det_indices[2]:]\n",
-    "    su_sl.reshape(num_scenarios, 2)\n",
+    "    # scenarios*num_constraints\n",
+    "    su_sl = su_sl.reshape(num_scenarios*4, 2)\n",
     "    \n",
     "    # <det> + scenario_prob*(sum_s <stoch>) - (su_sl_cost*<su_sl>)\n",
     "    det_seg = -np.dot(c,p) + np.dot(e,I) - np.dot(f,R)\n",
@@ -451,7 +226,7 @@
     "    stoch_seg = np.dot(q,s.T)\n",
     "    stoch_seg = np.dot(stoch_seg.diagonal(),np.ones(num_scenarios)*scenario_prob)\n",
     "    \n",
-    "    susl_seg = np.dot(np.dot(su_sl, c_susl), np.ones(num_scenarios)*scenario_prob)\n",
+    "    susl_seg = np.dot(np.dot(su_sl, c_susl), np.ones(num_scenarios*4)*scenario_prob)\n",
     "    \n",
     "    obj = stoch_seg + det_seg - susl_seg\n",
     "    \n",
@@ -460,13 +235,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Singular matrix C in LSQ subproblem    (Exit mode 6)\n",
+      "            Current function value: -462.607580193\n",
+      "            Iterations: 1\n",
+      "            Function evaluations: 60\n",
+      "            Gradient evaluations: 1\n",
+      "Sales Units - S0: 10.0, S1: 32.5\n",
+      "Purchase Units - P0: 10.0, P1: 32.5\n",
+      "Inventory Units - I0_final: 10.0, I1_final: 32.5, I2_final: 10.0, I3_final: 32.5\n",
+      "Operation Levels - R0: 10.0, R1: 32.5, R2: 40.0, R3: 85.0, R4: 10.0, R5: 10.0, R6: 10.0, R7: 10.0, R8: 40.0, R9: 35.0, R10: 0.0, R11: 0.0, R12: 0.0, R13: 0.0, R14: 0.0, R15: 0.0, R16: 0.0, R17: 0.0, R18: 0.0, R19: 0.0, R20: 0.0, R21: 0.0, R22: 0.0, R23: 0.0, R24: 0.0, R25: 0.0, R26: 0.0, R27: 0.0, R28: 0.0, R29: 0.0, R30: 0.0, R31: 0.0, R32: 0.0, R33: 0.0, R34: 0.0, R35: 0.0, R36: 0.0, R37: 0.0, R38: 0.0, R39: 0.0, R40: 0.0, R41: 0.0, R42: 0.0, R43: 0.0, R44: 0.0, R45: 0.0, R46: 0.0, R47: 0.0, R48: 0.0, R49: 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# num_scenarios = 5\n",
+    "num_scenarios = 5\n",
     "\n",
     "# surplus, slack penalties\n",
     "csusl = np.array([20,20])\n",
@@ -487,28 +278,48 @@
     "# <det> + <sampled items> + <su/sl => 2*num_scenarios>\n",
     "bounds = [(20, 40), (20, 85)]*num_scenarios # bounds unchanged for stochastic vars\n",
     "bounds += [(20, 100), (30, 200), (0, 20), (0, 20), (0, 20), (0, 20), (20, 100), (30, 100)]\n",
-    "bounds += [(0,None),(0,None)]*num_scenarios # su/sl bounds\n",
+    "bounds += [(0,None),(0,None)]*num_scenarios*4 # su/sl bounds\n",
     "\n",
     "# init vals\n",
-    "x0 = np.array([(tup[1] - tup[0])/2 for tup in bounds])\n",
+    "x0 = np.array(map(lambda x: midpoint_vals(x),bounds))\n",
     "\n",
     "# dynamically generate equality constraints\n",
-    "cons = [\n",
+    "\n",
+    "\"\"\"\n",
+    "surplus and slack variable consistent across all constraints for each scenario\n",
+    "determinstic_constraints = [\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: x[2] - 0.4*x[8] - x[4]},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: x[3] - 0.6*x[8] - x[9] - x[5]},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: 0.5*x[8] - x[6] - x[0]},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: 0.6*x[9] - x[7] - x[1]}\n",
     "]\n",
+    "\"\"\"\n",
     "\n",
     "cons = []\n",
     "# last index of stochastic variables in decision array (sei)\n",
     "sei = q_samples.size - 1\n",
     "# starting index of surplus and slack variables in decision array (ssi)\n",
-    "ssi = len(bounds) - (2*num_scenarios + 1)\n",
+    "ssi = len(bounds) - (2*num_scenarios*4 + 1)\n",
     "for idx in range(0,num_scenarios):\n",
     "    jump_indices = (2*idx, 2*idx+1)\n",
-    "    cons.append({\"type\":\"eq\", \"fun\": lambda x: x[sei+1] - 0.4*x[sei+7] - x[sei+3] + x[ssi+jump_indices[0]] - x[ssi+jump_indices[1]]})\n",
-    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: x[sei+2] - 0.6*x[sei+7] - x[sei+8] - x[sei+4] + x[]})\n"
+    "    su_idx = ssi+2*idx\n",
+    "    sl_idx = ssi+2*idx+1\n",
+    "    s1_idx = 2*idx\n",
+    "    s2_idx = 2*idx+1\n",
+    "    cons.append({\"type\":\"eq\", \"fun\": lambda x: x[sei+1] - 0.4*x[sei+7] - x[sei+3] + x[su_idx] - x[sl_idx]})\n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: x[sei+2] - 0.6*x[sei+7] - x[sei+8] - x[sei+4] + x[su_idx] - x[sl_idx]})\n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: 0.5*x[sei+7] - x[sei+5] - x[s1_idx]})\n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: 0.6*x[sei+8] - x[sei+6] - x[s2_idx]})\n",
+    "\n",
+    "res = optimize.minimize(tssp_obj, x0, args=(q_samples,c,e,f, csusl, num_scenarios), method=\"SLSQP\", \n",
+    "                        bounds=bounds, constraints=cons, options={\"disp\":True})\n",
+    "    \n",
+    "x = res.x\n",
+    "\n",
+    "print \"Sales Units - %s\" % \", \".join([\"S%s: %s\" % (idx, val) for idx, val in enumerate(x[:2])])\n",
+    "print \"Purchase Units - %s\" % \", \".join([\"P%s: %s\" % (idx, val) for idx, val in enumerate(x[2:4])])\n",
+    "print \"Inventory Units - %s\" % \", \".join([\"I%s_final: %s\" % (idx, val) for idx, val in enumerate(x[4:8])])\n",
+    "print \"Operation Levels - %s\" % \", \".join([\"R%s: %s\" % (idx, val) for idx, val in enumerate(x[8:])])"
    ]
   },
   {
